# ml-project-template

./: .gitignore  README.md  main.py  pyproject.toml
src/config/: config.py  estimators.py
src/data/: build.py
src/data/process/: process.py
src/data/raw/: raw.py
src/modeling/: evaluate.py  hyperopt.py  hyperoptimize.py  optimize_hyperopt.py  optimize_optuna.py  optuna.py  pipeline.py  process.py  train.py
src/plot/: plot.py  style.py
src/utils/: utils.py
